--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,6 +24,7 @@
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
     "manager-local-storage": "^1.0.4",
+    "msw": "^0.47.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^8.0.4",
