--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest-puppeteer": "6.1.0",
     "jsonwebtoken": "8.5.1",
     "moment": "2.29.1",
+    "msw": "^0.47.4",
     "mysql2": "2.3.3",
     "pm2": "5.2.0",
     "puppeteer": "13.5.1",
